logs/gitgitlab.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitGitlab-1.16.egg-info'...
Listing './lib/python3.5/site-packages/GitPython-0.3.2rc1.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Compiling './lib/python3.5/site-packages/git/cmd.py'...
***   File "./lib/python3.5/site-packages/git/cmd.py", line 320
    print ' '.join(command)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/config.py'...
***   File "./lib/python3.5/site-packages/git/config.py", line 186
    except IOError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/index'...
Compiling './lib/python3.5/site-packages/git/index/fun.py'...
***   File "./lib/python3.5/site-packages/git/index/fun.py", line 53
    return S_IFREG | 0644 | (mode & 0100) 		# blobs with or without executable bit
                        ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/objects'...
Compiling './lib/python3.5/site-packages/git/objects/blob.py'...
***   File "./lib/python3.5/site-packages/git/objects/blob.py", line 18
    executable_mode = 0100755
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/objects/submodule'...
Compiling './lib/python3.5/site-packages/git/objects/tree.py'...
***   File "./lib/python3.5/site-packages/git/objects/tree.py", line 119
    commit_id = 016		# equals stat.S_IFDIR | stat.S_IFLNK - a directory link
                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/odict.py'...
***   File "./lib/python3.5/site-packages/git/odict.py", line 614
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/refs'...
Compiling './lib/python3.5/site-packages/git/refs/head.py'...
***   File "./lib/python3.5/site-packages/git/refs/head.py", line 84
    except GitCommandError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/remote.py'...
***   File "./lib/python3.5/site-packages/git/remote.py", line 65
    except GitCommandError,e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/repo'...
Compiling './lib/python3.5/site-packages/git/repo/base.py'...
***   File "./lib/python3.5/site-packages/git/repo/base.py", line 652
    os.makedirs(path, 0755)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Compiling './lib/python3.5/site-packages/git/test/lib/helper.py'...
***   File "./lib/python3.5/site-packages/git/test/lib/helper.py", line 70
    os.chmod(fullpath, 0777)
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/test/test_fun.py'...
***   File "./lib/python3.5/site-packages/git/test/test_fun.py", line 79
    return (sha, S_IFREG | 0644 | executable*0111, name)
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/test/test_index.py'...
***   File "./lib/python3.5/site-packages/git/test/test_index.py", line 321
    except CheckoutError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/test/test_refs.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_refs.py, line 106)
Compiling './lib/python3.5/site-packages/git/test/test_repo.py'...
***   File "./lib/python3.5/site-packages/git/test/test_repo.py", line 491
    print "failed on %s" % path_section
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/git/test/test_submodule.py'...
***   File "./lib/python3.5/site-packages/git/test/test_submodule.py", line 31
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/git/util.py'...
***   File "./lib/python3.5/site-packages/git/util.py", line 486
    except OSError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/gitgitlab'...
Compiling './lib/python3.5/site-packages/gitgitlab/auth.py'...
***   File "./lib/python3.5/site-packages/gitgitlab/auth.py", line 46
    print 'Please provide your Gitlab token. You can find it on your account page, {}'.format(
                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitgitlab/cli.py'...
***   File "./lib/python3.5/site-packages/gitgitlab/cli.py", line 21
    except Unauthorized, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitgitlab/client.py'...
***   File "./lib/python3.5/site-packages/gitgitlab/client.py", line 114
    except gitlab.GitlabAuthenticationError, e:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/keyring'...
Listing './lib/python3.5/site-packages/keyring/backends'...
Listing './lib/python3.5/site-packages/keyring/tests'...
Listing './lib/python3.5/site-packages/keyring/tests/backends'...
Listing './lib/python3.5/site-packages/keyring/util'...
Listing './lib/python3.5/site-packages/keyring-3.3.egg-info'...
Listing './lib/python3.5/site-packages/opster-4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gitlab-0.6.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap-0.9.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
